log

Thu 14 Mar 2024 08:33:53 PM UTC: 
 exercises.c | 48 +++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 45 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:66:12: error: expected expression before ‘[’ token
   66 |   result = [size1 + size2];
      |            ^
Compilation failed
f878255
Thu 14 Mar 2024 08:34:17 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:65:12: error: expected expression before ‘[’ token
   65 |   result = [size1 + size2];
      |            ^
Compilation failed
2487210
Thu 14 Mar 2024 08:34:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:65:12: error: expected expression before ‘[’ token
   65 |   result = [size1 + size2]
      |            ^
exercises.c:65:27: error: expected ‘;’ before ‘while’
   65 |   result = [size1 + size2]
      |                           ^
      |                           ;
   66 |   while (i < size1 && j < size2)
      |   ~~~~~                    
exercises.c:69:5: error: ‘else’ without a previous ‘if’
   69 |     else
      |     ^~~~
Compilation failed
0939edc
Thu 14 Mar 2024 08:35:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:65:13: error: expected expression before ‘[’ token
   65 |   *result = [size1 + size2];
      |             ^
Compilation failed
20a3e07
Thu 14 Mar 2024 08:36:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:65:10: error: expected expression before ‘]’ token
   65 |   result[] = [size1 + size2];
      |          ^
Compilation failed
7ff6f4a
Thu 14 Mar 2024 08:36:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:65:7: error: ‘result’ redeclared as different kind of symbol
   65 |   int result[] = [size1 + size2];
      |       ^~~~~~
exercises.c:62:74: note: previous definition of ‘result’ with type ‘int *’
   62 | void mergeSortedArrays(int arr1[], int size1, int arr2[], int size2, int result[])
      |                                                                      ~~~~^~~~~~~~
exercises.c:65:18: error: expected expression before ‘[’ token
   65 |   int result[] = [size1 + size2];
      |                  ^
exercises.c:65:7: error: variable ‘result’ set but not used [-Werror=unused-but-set-variable]
   65 |   int result[] = [size1 + size2];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
3586ee5
Thu 14 Mar 2024 08:37:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:65:8: error: ‘result’ redeclared as different kind of symbol
   65 |   int* result[] = [size1 + size2];
      |        ^~~~~~
exercises.c:62:74: note: previous definition of ‘result’ with type ‘int *’
   62 | void mergeSortedArrays(int arr1[], int size1, int arr2[], int size2, int result[])
      |                                                                      ~~~~^~~~~~~~
exercises.c:65:19: error: expected expression before ‘[’ token
   65 |   int* result[] = [size1 + size2];
      |                   ^
exercises.c:68:19: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   68 |       result[k++] = arr1[i++];
      |                   ^
exercises.c:70:19: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   70 |       result[k++] = arr2[j++];
      |                   ^
exercises.c:73:17: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   73 |     result[k++] = arr1[i++];
      |                 ^
exercises.c:76:19: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   76 |       result[k++] = arr2[i++];
      |                   ^
exercises.c:65:8: error: variable ‘result’ set but not used [-Werror=unused-but-set-variable]
   65 |   int* result[] = [size1 + size2];
      |        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9bf3056
Thu 14 Mar 2024 08:40:49 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
ea48dc9
Thu 14 Mar 2024 08:42:21 PM UTC: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|5
total_score: 20/70
8dd6862
Thu 14 Mar 2024 08:44:01 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
8cf94ee
Thu 14 Mar 2024 08:45:57 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:69:26: error: expected ‘)’ before ‘{’ token
   69 |     if (arr1[i] < arr2[j]
      |        ~                 ^
      |                          )
   70 |     {
      |     ~                     
exercises.c:79:1: error: expected expression before ‘}’ token
   79 | }
      | ^
exercises.c:66:21: error: unused variable ‘k’ [-Werror=unused-variable]
   66 |   int i = 0, j = 0, k = 0;
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
afa68ab
Thu 14 Mar 2024 08:46:37 PM UTC: 
 exercises.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 20/70
09bddbb
Thu 14 Mar 2024 08:48:38 PM UTC: 
 exercises.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:64:8: error: ‘result’ redeclared as different kind of symbol
   64 |   int *result = (int *)malloc((size1 + size2) * sizeof(int));
      |        ^~~~~~
exercises.c:62:74: note: previous definition of ‘result’ with type ‘int *’
   62 | void mergeSortedArrays(int arr1[], int size1, int arr2[], int size2, int result[])
      |                                                                      ~~~~^~~~~~~~
Compilation failed
b7a305f
Thu 14 Mar 2024 08:50:46 PM UTC: 
 exercises.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   31 |   for (int i = 0; i < size / 2; i++)
      |   ^~~
exercises.c:33:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   33 |     arr[i] = arr[size - i - 1];
      |     ^~~
exercises.c:33:9: error: ‘i’ undeclared (first use in this function)
   33 |     arr[i] = arr[size - i - 1];
      |         ^
exercises.c:33:9: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
9b21482
